    - gf2x.h now contains GF2X_VERSION_* macros ; previous versions of
      offered no way to distinguish between versions. For developers, an
      example of how this can be done in config scripts is in
      check-gf2x-version.c
    - the shared library major version number has been increased to 2.0.0
      (as we should have done for 1.2, in fact)
    - gf2x now compiles fine with icc
    - the shared libraries now expose only the official functions, not the
      internal ones.
    - the fft library is now separate, and a build with or without
      --enable-fft-interface does not affect the generated libgf2x.so in
      any way.
    - packaging bugs that affected usability of the fft interface have
      been fixed.
    - two long-standing bugs in the ternary FFT for ridiculously small
      transform lengths have been fixed.

gf2x-1.2:
    - changed the type representing the polynomial sizes from "unsigned int"
      to "unsigned long". On a 64-bit machine, the maximal degree was
      2^38-1, now it is 2^70-1.
    - gf2x_mul is now thread-safe. gf2x_mul_r is here in case a user
      wants to provide the storage pool and avoid having gf2x_mul do
      allocation for that. Note that currently, for FFT sizes, gf2x_mul
      does allocation anyway.
    - based (strongly) on the first above change and (mildly) on the
      second one, bump the shared library version number to 1.2.0
    - added support for armv7l
    - made license more clear: only one file is gpl-licensed
      (toom-gpl.c), all the rest is lgpl-happy.

gf2x-1.1: (bugfix release)
    - We're considering using this file for the first time.
    - Redone tuning.
    - Fixed a couple of build failures, and autoconf warnings.
    - Added a faster mul4
    - Added some support for cross compilation (might also have been
      broken in the meantime, we don't have regression testing for this).

    The interface is unchanged, so the shared library version has not
    changed and still is 1.0.0
