@@ -296,7 +296,7 @@ AC_CONFIG_HEADERS([gf2x/gf2x-config.h gf2x/gf2x-config-export.h gf2x.h])
 #AC_SUBST([MAYBE_GF2X_FFT])
 
 AC_CONFIG_FILES([version.sh Makefile tests/Makefile lowlevel/Makefile
-                 src/Makefile fft/Makefile apps/Makefile gf2x.h.in])
+                 src/Makefile fft/Makefile apps/Makefile gf2x.h.in gf2x.pc])
 
 AC_OUTPUT
 
