@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@prefix@/include
+
+Name: @PACKAGE_NAME@
+Description: C library for multiplying polynomials over the binary field
+Version: @PACKAGE_VERSION@
+Libs: -L${libdir} -lgf2x
+Cflags: -I${includedir}
