@@ -15,6 +15,9 @@ gf2x-1.3.0:
       been fixed.
     - two long-standing bugs in the ternary FFT for ridiculously small
       transform lengths have been fixed.
+    - configuration file for pkg-config added: assuming gf2x installed in
+      <prefix> known to pkg-config, "pkg-config --cflags gf2x" etc will
+      work. (Otherwise, one would need PKG_CONFIG_PATH=<prefix>/lib/pkg_config).
 
 gf2x-1.2:
     - changed the type representing the polynomial sizes from "unsigned int"
